# Tucil2_13523160

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/modules/: errorMethods.cpp  errorMethods.hpp  gif_maker.cpp  gif_maker.hpp  imageUtils.cpp  imageUtils.hpp  quadTree.cpp  quadTree.hpp
